Fix details width when text is too long

--- a/front-end-src/scss/_property.scss
+++ b/front-end-src/scss/_property.scss
@@ -299,6 +299,7 @@
 
   .property-article-right-column {
     min-width: 27%;
+    max-width: 27%;
     margin-left: 50px;
   }
 }
